--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
+
+        // Backports Lambdas from Java 8 to Java 6/7 (required because of target API 15)
+        classpath 'me.tatarka:gradle-retrolambda:3.7.1'
         
         // NOTE: Do not place application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
